tooling/nargo_cli/tests/snapshots/execution_success/global_var_func_with_multiple_entry_points/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global ONE: Field = 0x01;

global TWO: Field = 0x02;

global THREE: Field = 0x03;

fn main(x: Field, y: pub Field) {
    // Safety: comment added by `nargo expand`
    unsafe {
        entry_point_one(x, y);
        entry_point_two(x, y);
    }
}

unconstrained fn entry_point_one(x: Field, y: Field) {
    let z: Field = (ONE + x) + y;
    assert(z == 2_Field);
    inner_func(x, y);
}

unconstrained fn entry_point_two(x: Field, y: Field) {
    let z: Field = (TWO + x) + y;
    assert(z == 3_Field);
    inner_func(x, y);
}

unconstrained fn inner_func(x: Field, y: Field) {
    let z: Field = (THREE + x) + y;
    assert(z == 4_Field);
}
